.deployment/client-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - ports: 3050
      targerPort: 3000
      nodePort: 31515
  selector:
    component: web
