.deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    name: go-app
  ports:
    - port: 80
      targetPort: 3001
